# coda-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile  Dockerfile.release  LICENSE  README.md  mcp.json.example  server.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: client.rs  config.rs  error.rs  main.rs
src/models/: column.rs  control.rs  doc.rs  formula.rs  mod.rs  page.rs  row.rs  table.rs
tests/: docker_e2e.rs  e2e_tests.rs  integration_tests.rs
