[package]
name = "coda-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Coda.io API"
license = "MIT"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
flate2 = "1.1.9"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
