[package]
name = "coda-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "MCP server for Coda.io API"
license = "MIT"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
flate2 = "1.1.9"
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
